@@ -2,11 +2,14 @@ package com.ecommerce.controllers.protectedControllers;
 
 import com.ecommerce.dto.Favorite.CreateFavoriteDTO;
 import com.ecommerce.dto.Favorite.FavoriteDTO;
+import com.ecommerce.dto.Product.ProductListAdminDTO;
+import com.ecommerce.dto.Product.ProductListDTO;
 import com.ecommerce.entities.Favorite;
 import com.ecommerce.entities.Product;
 import com.ecommerce.entities.User;
 import com.ecommerce.mappers.FavoriteMapper;
 import com.ecommerce.services.FavoriteService;
+import com.ecommerce.services.ProductService;
 import com.ecommerce.services.UserService;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.http.HttpStatus;
@@ -22,11 +25,13 @@ public class FavoriteProtectedController {
     private final FavoriteService favoriteService;
     private final UserService userService;
     private final FavoriteMapper favoriteMapper;
+    private final ProductService productService;
 
-    public FavoriteProtectedController(FavoriteService favoriteService, UserService userService, FavoriteMapper favoriteMapper) {
+    public FavoriteProtectedController(FavoriteService favoriteService, UserService userService, FavoriteMapper favoriteMapper, ProductService productService) {
         this.favoriteService = favoriteService;
         this.userService = userService;
         this.favoriteMapper = favoriteMapper;
+        this.productService = productService;
     }
 
     @GetMapping
@@ -38,11 +43,12 @@ public class FavoriteProtectedController {
     }
 
     @GetMapping("/getProducts")
-    public ResponseEntity<List<Product>> getFavoritesProducts() {
+    public ResponseEntity<List<ProductListDTO>> getFavoritesProducts() {
         User user = userService.getCurrentUser();
         List<Favorite> favorites = favoriteService.findAllByUserId(user.getId());
-        List<Product> products = favorites.stream().map(Favorite::getProduct).collect(Collectors.toList());
-        return ResponseEntity.ok(products);
+        List<Product> products = favorites.stream().map(Favorite::getProduct).toList();
+
+        return ResponseEntity.ok(products.stream().map(productService::getProductListDTO).toList());
     }
 
     @PostMapping("/addProduct/{id}")
